Bug 1208517 - Use the legacy opt-out in CanAccessNativeAnon for now to avoid crashes. r=me